[package]
name = "reqwest-async-read"
version = "0.2.0"
edition = "2021"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"]}
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
